--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,27 +5,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>{{ site.title }}{% if page.title %} :: {% endif %}{{ page.title }}</title>
-  <link rel="stylesheet" href="/css/styles.css">
-  <link rel="shortcut icon" href="/images/favicon/favicon.ico">
-  <link rel="icon" sizes="16x16 32x32 64x64" href="/images/favicon/favicon.ico">
-  <link rel="icon" type="image/png" sizes="196x196" href="/images/favicon/favicon-192.png">
-  <link rel="icon" type="image/png" sizes="160x160" href="/images/favicon/favicon-160.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="/images/favicon/favicon-96.png">
-  <link rel="icon" type="image/png" sizes="64x64" href="/images/favicon/favicon-64.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon/favicon-32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16.png">
-  <link rel="apple-touch-icon" href="/images/favicon/favicon-57.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="/images/favicon/favicon-114.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="/images/favicon/favicon-72.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="/images/favicon/favicon-144.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="/images/favicon/favicon-60.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="/images/favicon/favicon-120.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="/images/favicon/favicon-76.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="/images/favicon/favicon-152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/favicon-180.png">
+  <link rel="stylesheet" href="{{ "/css/styles.css" | relative_url }}">
+  <link rel="shortcut icon" href="{{ "/images/favicon/favicon.ico" | relative_url }}">
+  <link rel="icon" sizes="16x16 32x32 64x64" href="{{ "/images/favicon/favicon.ico" | relative_url }}">
+  <link rel="icon" type="image/png" sizes="196x196" href="{{ "/images/favicon/favicon-192.png" | relative_url }}">
+  <link rel="icon" type="image/png" sizes="160x160" href="{{ "/images/favicon/favicon-160.png" | relative_url }}">
+  <link rel="icon" type="image/png" sizes="96x96" href="{{ "/images/favicon/favicon-96.png" | relative_url }}">
+  <link rel="icon" type="image/png" sizes="64x64" href="{{ "/images/favicon/favicon-64.png" | relative_url }}">
+  <link rel="icon" type="image/png" sizes="32x32" href="{{ "/images/favicon/favicon-32.png" | relative_url }}">
+  <link rel="icon" type="image/png" sizes="16x16" href="{{ "/images/favicon/favicon-16.png" | relative_url }}">
+  <link rel="apple-touch-icon" href="{{ "/images/favicon/favicon-57.png" | relative_url }}">
+  <link rel="apple-touch-icon" sizes="114x114" href="{{ "/images/favicon/favicon-114.png" | relative_url }}">
+  <link rel="apple-touch-icon" sizes="72x72" href="{{ "/images/favicon/favicon-72.png" | relative_url }}">
+  <link rel="apple-touch-icon" sizes="144x144" href="{{ "/images/favicon/favicon-144.png" | relative_url }}">
+  <link rel="apple-touch-icon" sizes="60x60" href="{{ "/images/favicon/favicon-60.png" | relative_url }}">
+  <link rel="apple-touch-icon" sizes="120x120" href="{{ "/images/favicon/favicon-120.png" | relative_url }}">
+  <link rel="apple-touch-icon" sizes="76x76" href="{{ "/images/favicon/favicon-76.png" | relative_url }}">
+  <link rel="apple-touch-icon" sizes="152x152" href="{{ "/images/favicon/favicon-152.png" | relative_url }}">
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ "/images/favicon/favicon-180.png" | relative_url }}">
   <meta name="msapplication-TileColor" content="#FFFFFF">
-  <meta name="msapplication-TileImage" content="/images/favicon/favicon-144.png">
-  <meta name="msapplication-config" content="/browserconfig.xml">
+  <meta name="msapplication-TileImage" content="{{ "/images/favicon/favicon-144.png" | relative_url }}">
+  <meta name="msapplication-config" content="{{ "/browserconfig.xml" | relative_url }}">
+  <style type="text/css">
+    .top-logo { background-image: url("{{ "/images/top.jpg" | relative_url }}"); }
+    .nav { background-image: url("{{ "/images/left.jpg" | relative_url }}"); }
+    #local-img1 { background-image: url("{{ site.images.local1 | relative_url }}"); }
+    #local-img2 { background-image: url("{{ site.images.local2 | relative_url }}"); }
+    #springer-img { background-image: url("{{ "/images/springer.png" | relative_url }}"); }
+  </style>
 </head>
 <body>
   <div class="all">
@@ -43,20 +50,20 @@
         <div class="nav">
           <nav>
             <ul>
-              <li><a href="/">Home</a></li>
-              <li><!--<a href="/registration">-->Registration<!--</a>--></li>
-              <li><!--<a href="/accepted">-->Accepted Papers<!--</a>--></li>
-              <li><!--<a href="/invited">-->Invited Talks<!--</a>--></li>
-              <li><!--<a href="/program">-->Programme<!--</a>--></li>
-              <li><a href="/cfp">Call For Papers</a></li>
-              <li><a href="/submission">Paper Submission</a></li>
-              <li><a href="/pc">Programme Committee</a></li>
-              <li><!--<a href="/location">-->Location<!--</a>--></li>
-              <li><!--<a href="/social">-->Social Event<!--</a>--></li>
-              <li><!--<a href="/accommodation">-->Accommodation<!--</a>--></li>
-              <li><a href="/steering">Steering Committee</a></li>
-              <li><a href="/previous">Previous Editions</a></li>
-              <li><a href="/contact">Contact</a></li>
+              <li><a href="{{ "/" | relative_url }}">Home</a></li>
+              <li><!--<a href="{{ "/registration" | relative_url }}">-->Registration<!--</a>--></li>
+              <li><!--<a href="{{ "/accepted" | relative_url }}">-->Accepted Papers<!--</a>--></li>
+              <li><!--<a href="{{ "/invited" | reluative_url }}">-->Invited Talks<!--</a>--></li>
+              <li><!--<a href="{{ "/program" | reluative_url }}">-->Programme<!--</a>--></li>
+              <li><a href="{{ "/cfp" | reluative_url }}">Call For Papers</a></li>
+              <li><a href="{{ "/submission" | relative_url }}">Paper Submission</a></li>
+              <li><a href="{{ "/pc" | relative_url }}">Programme Committee</a></li>
+              <li><!--<a href="{{ "/location" | relative_url }}">-->Location<!--</a>--></li>
+              <li><!--<a href="{{ "/social" | relative_url }}">-->Social Event<!--</a>--></li>
+              <li><!--<a href="{{ "/accommodation" | reluative_url }}">-->Accommodation<!--</a>--></li>
+              <li><a href="{{ "/steering" | relative_url }}">Steering Committee</a></li>
+              <li><a href="{{ "/previous" | relative_url }}">Previous Editions</a></li>
+              <li><a href="{{ "/contact" | reluative_url }}">Contact</a></li>
             </ul>
           </nav>
         </div>
@@ -98,7 +105,7 @@
       </div>
 
       <div class="footer">
-        <a href="/">Impress</a> | <a href="/contact">Contact</a>
+        <a href="{{ "/" | relative_url }}">Impress</a> | <a href="{{ "/contact" | relative_url }}">Contact</a>
       </div>
     </div>
   </div>
