--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -100,7 +100,7 @@
             Tetsuo Yokoyama<br/>
             <i>Nanzan University, Japan</i>
           </div>
-          <!--<a href="http://www.springer.com/lncs" target="_blank"><div id="springer-img"></div></a>-->
+          <a href="http://www.springer.com/lncs" target="_blank"><div id="springer-img"></div></a>
         </div>
       </div>
 
