--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,9 +58,9 @@
               <li><a href="{{ "/cfp" | reluative_url }}">Call For Papers</a></li>
               <li><a href="{{ "/submission" | relative_url }}">Paper Submission</a></li>
               <li><a href="{{ "/pc" | relative_url }}">Programme Committee</a></li>
-              <li><!--<a href="{{ "/location" | relative_url }}">-->Location<!--</a>--></li>
-              <li><!--<a href="{{ "/social" | relative_url }}">-->Social Event<!--</a>--></li>
-              <li><!--<a href="{{ "/accommodation" | reluative_url }}">-->Accommodation<!--</a>--></li>
+              <!--<li><a href="{{ "/location" | relative_url }}">Location</a></li>-->
+              <!--<li><a href="{{ "/social" | relative_url }}">Social Event</a></li>-->
+              <!--<li><a href="{{ "/accommodation" | reluative_url }}">Accommodation</a></li>-->
               <li><a href="{{ "/steering" | relative_url }}">Steering Committee</a></li>
               <li><a href="{{ "/previous" | relative_url }}">Previous Editions</a></li>
               <li><a href="{{ "/contact" | reluative_url }}">Contact</a></li>
