--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -102,6 +102,7 @@
           </div>
           <a href="https://www.scat.or.jp/en/" target="_blank"><div class="center;"><img src="/images/scat.png" style="width:60%;height:60%"/></div></a>
           <a href="http://www.springer.com/lncs" target="_blank"><div id="springer-img"></div></a>
+          <!-- Co-sponsored by NU -->
           <a href="https://www.i.nagoya-u.ac.jp/en" target="_blank"><div class="center;"><img src="/images/nu-i.png" style="width:80%;height:80%"/></div></a>
         </div>
       </div>
