--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,10 +51,10 @@
           <nav>
             <ul>
               <li><a href="{{ "/" | relative_url }}">Home</a></li>
-              <li><a href="{{ "/registration" | relative_url }}">Registration</a></li>
-              <li><a href="{{ "/accepted" | relative_url }}">Accepted Papers<img style="width:10%;height:10%;" src="/images/new_icon.png"/></a></li>
+              <li><a href="{{ "/registration" | relative_url }}">Registration<img style="width:10%;height:10%;" src="/images/new_icon.png"/></a></li>
+              <li><a href="{{ "/accepted" | relative_url }}">Accepted Papers</a></li>
               <li><a href="{{ "/invited" | reluative_url }}">Invited Talks</a></li>
-              <li><!--<a href="{{ "/program" | reluative_url }}">-->Programme<!--</a>--></li>
+              <li><a href="{{ "/program" | reluative_url }}">Programme<img style="width:10%;height:10%;" src="/images/new_icon.png"/></a></li>
               <li><a href="{{ "/cfp" | reluative_url }}">Call For Papers</a></li>
               <li><a href="{{ "/submission" | relative_url }}">Paper Submission</a></li>
               <li><a href="{{ "/pc" | relative_url }}">Programme Committee</a></li>
